# ipa-pronunciation-coach

./: .gitignore  README.md  package.json
.github/workflows/: ci.yml
backend/: .env.example  Cargo.toml  Dockerfile  Makefile  docker-compose.yml  fmt-check.sh  fmt.sh  rustfmt.toml
backend/.cargo/: config.toml
backend/migrations/: 001_initial_schema.sql
backend/scripts/: fmt-check
backend/src/: auth.rs  config.rs  db.rs  lib.rs  main.rs
backend/src/jobs/: mod.rs  worker.rs
backend/src/models/: live.rs  mod.rs  practice.rs  user.rs  word.rs
backend/src/routes/: auth.rs  live.rs  logs.rs  media.rs  mod.rs  practice.rs  vocab.rs  ws.rs
backend/src/services/: mod.rs  scoring.rs  search.rs  timecap.rs  vocab.rs
backend/tests/: integration_tests.rs
backend/tests/common/: mod.rs
frontend/: .env.example  astro.config.mjs  eslint.config.mjs  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.json  vitest.config.ts
frontend/e2e/: homepage.spec.ts
frontend/src/: App.vue  main.ts
frontend/src/api/: auth.ts  client.ts  practice.ts  vocabulary.ts
frontend/src/components/: ApiExample.vue  DarkModeToggle.vue  Dashboard.vue  Icon.vue  IpaBadge.vue  LoginForm.vue  PracticeSession.vue  ProgressTracker.vue  RecorderButton.vue  RegisterForm.vue  SettingsManager.vue  VocabularyManager.vue  WordCard.vue
frontend/src/composables/: useAuth.ts  usePractice.ts  useVocabulary.ts
frontend/src/layouts/: Layout.astro
frontend/src/pages/: dashboard.astro  index.astro  login.astro  practice.astro  progress.astro  register.astro  settings.astro  vocab.astro
frontend/src/plugins/: query.ts
frontend/src/schemas/: auth.ts
(+7 files in other folders)
